# eidon

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
.agents/skills/pi-sdk/: SKILL.md
.agents/skills/tauri-mac-build/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/backend/capabilities/: runtime-paths.ts
app/backend/domain/: ai.ts  consistency.ts  index.ts  nodes.ts  snapshots.ts  templates.ts  todos.ts
app/backend/ipc/: emit.ts  register.ts
app/backend/services/: ai-service.ts  consistency-service.ts  node-service.ts  template-service.ts  todo-service.ts  workspace-store.ts
app/backend/shell/: index.ts  tray.ts
app/bridge/ipc/: ai.ts  client.ts  clipboard.ts  consistency.ts  dialog.ts  events.ts  git.ts  index.ts  nodes.ts  notification.ts  opener.ts  path.ts  platform.ts  snapshots.ts  templates.ts  todos.ts
app/core/: index.ts
app/core/ai/: README.md  index.ts
app/core/bridge/: events.ts  file.ts  git.ts  index.ts  notification.ts  opener.ts  tauri.ts
app/core/consistency/: index.ts
app/core/contracts/: node.ts
app/core/nodes/: index.ts
app/core/shared/: date.ts  id.ts  index.ts
app/core/snapshots/: index.ts
app/core/templates/: index.ts
app/core/todos/: index.ts
app/frontend/: App.tsx  global.d.ts  main.tsx  types.ts
app/frontend/editor-extensions/: cm-ambient.d.ts  cm-citations.ts  cm-config.ts  cm-drag-aware.ts  cm-image-paste.ts  cm-live-blocks.ts  cm-live-preview.ts  cm-live-render.ts  cm-slash-commands.ts  cm-spellcheck.ts  cm-tag-autocomplete.ts  cm-wikilink.ts
app/frontend/effects/: dom-effects.ts
app/frontend/hooks/: useAutoCommit.ts  useBasesView.ts  useCommands.ts  useDailyNotes.ts  useExport.ts  useFileWatcher.ts  useFiles.ts  useGlobalSearch.ts  usePandocExport.ts  useSessionRestore.ts  useShortcuts.ts  useWritingGoals.ts
app/frontend/i18n/: en.ts  index.ts  translate.ts  useI18n.ts  zh.ts
app/frontend/lib/: bases.ts  check-update.ts  command-filter.ts  daily-notes.ts  daily-todos.ts  docx-export.ts  eidon-paths.ts  filetree-menu.ts  history-prune.ts  image-resolve.ts  load-citations.ts  markdown.ts  pdf-export.ts  pdf-options.ts  reducers.ts  reminder-scheduler.ts  shortcuts.ts  template-drafts.ts  template-visuals.ts  themes.ts  welcome-tour.ts  writing-goals.ts
app/frontend/stores/: ai.ts  cloudSync.ts  diffView.ts  gitHistory.ts  nodes.ts  pomodoro.ts  recentEdits.ts  settings.ts  tabs.ts  templates.ts  tiles.ts  toasts.ts  todos.ts  workspace.ts  workspaceIndex.ts  writingSession.ts
app/frontend/styles/: ai.css  cjk-font.css  components.css  editor.css  hljs-theme.css  main.css  preview.css  settings.css
app/preload/: index.ts
app/resources/icons/: icon.icns
app/shared/contracts/: ai.ts  index.ts  template.ts  todos.ts
app/shared/ipc/: api.ts  channels.ts  events.ts  index.ts
app/shared/models/: ai.ts  consistency.ts  dialog.ts  file.ts  fs.ts  git.ts  index.ts  node.ts  search.ts  shell.ts  template.ts  todo.ts
app/shared/utils/: cron.ts  errors.ts  index.ts  path.ts  reminders.ts
app/src/: App.tsx  main.tsx  types.ts
app/src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  build.rs  entitlements.mas.plist  installer.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/examples/: autogit_drive.rs
app/src-tauri/src/: lib.rs  main.rs  runner.rs
app/src-tauri/src/editor/: file_ops.rs  pandoc.rs  watcher.rs
app/src-tauri/src/git/: cloud_folder.rs  crypto.rs  git_history.rs  git_ops.rs  git_prune.rs  github_sync.rs
app/src-tauri/src/knowledge/: workspace_index.rs
app/src-tauri/src/shell/: app_build.rs  dev_bridge.rs
app/src-tauri/tests/: copy_file_test.rs  git_history_e2e_test.rs  github_sync_e2e_test.rs  github_sync_e2ee_test.rs  read_file_test.rs  search_test.rs
app/src/components/: AboutDialog.tsx  ActivityBar.tsx  BacklinksPanel.tsx  BasesView.tsx  CalendarPanel.tsx  CitationPickerSettings.tsx  CjkProofread.tsx  CloudFolderBanner.tsx  CommandPalette.tsx  CommitInput.tsx  Editor.tsx  EidonPet.tsx  ErrorBoundary.tsx  FileChangedDialog.tsx  FilePropertiesPanel.tsx  FileTree.tsx  GithubConflictPanel.tsx  GithubSyncSettings.tsx  GlobalSearch.tsx  HistoryPanel.tsx  HistorySettings.tsx  MarkdownHelp.tsx  NodeCreateDialog.tsx  NodeInspector.tsx  NodePropertiesPanel.tsx  Outline.tsx  OverviewPanel.tsx  PaneContent.tsx  PaneHost.tsx  PaneTabBar.tsx  PomodoroPill.tsx  PomodoroPopover.tsx  Preview.tsx  PreviewSearch.tsx  ProxySettings.tsx  QuickSwitcher.tsx  ReadingView.tsx  SessionRestoreDialog.tsx  SettingsPanel.tsx  SpellcheckMenu.tsx  (+14 more)
docs/: EIDON_本期迭代_PRD.md  EIDON_本期迭代_用户故事旅程.md  tauri2-to-electron-migration-evaluation.md
docs/pi-ai-docs/: 01-architecture-overview.md  02-pi-ai-llm-provider.md  03-pi-agent-core.md  04-pi-coding-agent.md  05-pi-tui.md  06-extensions-api.md  07-event-system.md  08-compaction-context.md  09-automation-patterns.md  10-eidon-integration-guide.md  README.md
docs/prototype-ref/: app.jsx  aux.jsx  index.html  lucide-icons.mjs  styles.css
docs/原型参考/: data.js  editor.jsx  i18n.js  rightpanel.jsx  settings-page.jsx  sidebar.jsx
fixtures/contracts/: agent.json  bridge.json  node.l3.json  providers.json  template.l1.档案.json  todos.l3.json
scripts/: README.md  build-mac-arm64-unsigned.sh  build-mac.sh  release.sh
speculo/.speculo/: dev-status.json
speculo/commands/: archive.md  handoff.md  status.md
(+469 files in other folders)
