[package]
name = "eidon"
version = "0.0.5"
description = "EIDON — local-first structured knowledge IDE"
authors = ["NAMEWTA"]
edition = "2021"
# Disable auto-discovery of bins so Cargo only produces the explicit
# [[bin]] "EIDON" below (instead of also building an implicit "eidon"
# binary from src/main.rs + package.name).
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Force the binary name to "EIDON" so it matches tauri.conf.json's
# `mainBinaryName`. Without this, Cargo would produce `eidon.exe` (lowercase
# from [package].name) while Tauri's NSIS template was creating shortcuts
# pointing to a different name, causing the Windows shortcut to break.
[[bin]]
name = "EIDON"
path = "src/main.rs"

# v4.3.1 issue #73 — size-optimised release profile. Most of the Android
# APK weight (22 MB out of 26 MB on arm64-v8a) is `libapp_lib.so` —
# the Rust shared library with all native deps bundled. Default cargo
# release config (opt-level=3, no LTO, codegen-units=16) optimises for
# speed; this overrides for size. Compile time goes from ~2 min to
# ~5-8 min but runtime cost is negligible for EIDON because the hot
# path is the WebView (JS / KaTeX / Mermaid), not Rust. Rust only
# handles boundary ops (file I/O, git);
# none are tight inner loops sensitive to opt-level.
#
# We do NOT set `panic = "abort"` even though it would save another
# 5-10% — Tauri's command error path expects unwinding to convert a
# panicking handler into a JS-side error; abort would crash the whole
# process instead.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
incremental = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "1.0.0"
encoding_rs = "0.8.35"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.2"
# 节点级待办的定时提醒：到点弹原生系统通知（应用运行时；无托盘/无后台，见 plan）。
tauri-plugin-notification = "2"
walkdir = "2.5.0"
# tokio: rt-multi-thread for tauri::async_runtime + debug dev-bridge.
# net/io-util/sync/time/macros are debug-only deps for the dev-bridge
# WebDriver localhost server (gated by `#[cfg(debug_assertions)]`). Cargo
# doesn't have a stable target spec for "debug only", so we just enable
# the features unconditionally — they're tokio's lightweight modules and
# don't add measurable bytes to the release binary, while letting us keep
# the bridge code in a single conditional module rather than juggling a
# whole separate crate.
#
# (Telemetry used to live in `tauri-plugin-aptabase` and pinned this list
#  for its plugin-setup `tokio::spawn` calls. We migrated telemetry to a
#  pure-frontend POST to the telemetry endpoint so the plugin is gone, but
#  the runtime entry in main.rs and these features stay — they're still
#  needed for the rest of the app's async work.)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }

# File-to-Markdown conversion (built-in, no Python needed)
htmd = "0.5"
zip = "2"
quick-xml = "0.37"
calamine = "0.26"
csv = "1.3"
regex-lite = "0.1"             # Lightweight regex for HTML tag stripping
pdf-extract = "0.7"            # PDF text extraction

# v2.0 workspace index (F1 wikilinks, F3 tags, F6 bases)
# + file-change watcher for tab reload
notify = "8"
notify-debouncer-mini = "0.7"
serde_yaml = "0.9"
sha2 = "0.10"                  # cache key hashing
once_cell = "1"                # global index state

# v2.0 spellcheck (F2): Hunspell wrapped in pure-Rust port
spellbook = "0.3"              # MIT, no GPL deps; ships with English+Latin support

# `chrono` does human-readable date formatting (incl. ISO week numbers —
# strftime `%V`) for daily notes and git history timestamps.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# window-state plugin is desktop-only — kept at the very end of the
# dependency tables to avoid bleeding the platform constraint onto every
# subsequent dep (TOML sections continue until the next [header]).
# This caught us once already — see 94bd87a / 2026-04-21 broke iOS for
# 3 weeks because window-state was placed mid-file with a blank line.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

# v2.2 AutoGit per-note history: libgit2 bindings for cross-platform git
# access (no shelling out). `vendored-libgit2` ships the library so we don't
# depend on a system one. Android: cross-compiling libgit2 through the NDK
# is painful; AutoGit is a desktop-class feature and is cfg-gated off Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "https", "vendored-openssl"] }

# Platform-specific deps for macOS AppKit locale (apply_macos_language → NSUserDefaults).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSUserDefaults"] }

[dev-dependencies]
tempfile = "3"
